--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@
     margin: 0;
     padding: 0;
   }
+
+  input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
   
   body {
     display: flex;
@@ -96,6 +102,12 @@
     height: 100%;
     padding: 15px;
   }
+
+  .secondary-screen {
+    border-radius: 15px;
+    height: 100%;
+    padding: 15px;
+  }
   
   .screen__header {
     align-items: center;
@@ -124,6 +136,17 @@
   .poke-back-image {
     height: 96px;
     width: 96px;
+  }
+
+  .screen__image-big {
+    display: flex;
+    justify-content: center;
+  }
+
+  .poke-front-image-big,
+  .poke-back-image-big {
+    height: 200px;
+    width: 200px;
   }
   
   .screen__description {
@@ -164,6 +187,14 @@
     display: flex;
     justify-content: space-around;
     margin: 10px 25px 0;
+  }
+
+  .poke-id-input {
+    height: 25px;
+    width: 30px;
+    -moz-appearance: textfield;
+    border: black solid;
+    text-align: center;
   }
   
   .controllers__d-pad {
@@ -312,7 +343,7 @@
     color: white;
     cursor: pointer;
     display: flex;
-    font-size: 12px;
+    font-size: 13px;
     height: 25px;
     overflow-x: hidden;
     padding-left: 5px;
@@ -337,8 +368,8 @@
     margin-top: 25px;
   }
   
-  .left-button,
-  .right-button {
+  .previous-button,
+  .next-button {
     align-items: center;
     background: #DEDEDE;
     border-radius: 3px;
